# axpy_optim

./: README.md
axpy_optim/: CMakeLists.txt  copy.cpp
axpy_optim/include/: common.h  test_avx.h  test_riscv.h
axpy_optim/src/: main.cpp
